Adds callback for computing the best thresholds for each output node

--- a/fashion_challenge/batch_generators.ipynb
+++ b/fashion_challenge/batch_generators.ipynb
@@ -574,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Batch generation by binning images"
+    "# Batch generators"
    ]
   },
   {
@@ -621,7 +621,6 @@
     "    df_size = pd.DataFrame(list(size.values()), index=list(map(int, size.keys())), columns=['x', 'y'])\n",
     "    \n",
     "    # Join all results\n",
-    "    import pdb; pdb.set_trace()\n",
     "    df_final = pd.concat([df.loc[df_size.index], df_size], axis=1)\n",
     "    df_final['aspect_ratio'] = df_final.x / df_final.y\n",
     "    \n",
