add function to compute individual thresholds

--- a/fashion_challenge/keras_callbacks.ipynb
+++ b/fashion_challenge/keras_callbacks.ipynb
@@ -45,7 +45,21 @@
    },
    "outputs": [],
    "source": [
-    "thres = FindThresholds(train_gen, df)"
+    "def compute_thresholds(true, predictions):\n",
+    "            thresholds = []\n",
+    "        best_acc = []\n",
+    "        for col_idx in range(df_pred.shape[1]):\n",
+    "            max_acc = 0\n",
+    "            for thres in np.linspace(-1, 1, 99):\n",
+    "                final_output = np.where(df_pred.iloc[:, col_idx] > thres, 1, 0)\n",
+    "                acc = accuracy_score(self.df.iloc[:, col_idx], final_output)\n",
+    "                if acc > max_acc:\n",
+    "                    max_acc = acc\n",
+    "                    best_thres = thres\n",
+    "            thresholds.append(best_thres)\n",
+    "            best_acc.append(max_acc)\n",
+    "        print(thresholds)\n",
+    "        print(best_acc)"
    ]
   }
  ],
