adds image normalization and white padding

--- a/fashion_challenge/batch_generators.ipynb
+++ b/fashion_challenge/batch_generators.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -589,8 +589,8 @@
     "# given spits out images for that aspect ratio after resizing.\n",
     "\n",
     "def compute_df(train_json, train_path, max_size=None):\n",
-    "    if 'df_final.csv' in os.listdir('.'):\n",
-    "        return pd.read_csv('df_final.csv')\n",
+    "#     if 'df_final.csv' in os.listdir('.'):\n",
+    "#         return pd.read_csv('df_final.csv')\n",
     "    \n",
     "    train_inp = open(train_json).read()\n",
     "    train_inp = json.loads(train_inp)\n",
@@ -625,14 +625,14 @@
     "    df_final['aspect_ratio'] = df_final.x / df_final.y\n",
     "    \n",
     "    # Write the results to file\n",
-    "    df_final.to_csv('df_final.csv')\n",
+    "    df_final.to_csv('df_final_val.csv')\n",
     "    del df; del df_size\n",
     "    return df_final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -898,6 +898,17 @@
     "    i+=1\n",
     "    if i > 50:\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_validation = compute_df('/home/ankur/kaggle/fashion/validation.json', '/home/ankur/kaggle/fashion/validation/')"
    ]
   },
   {
